--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,12 +9,12 @@
   "issue.type.bug": "Bug report",
   "issue.extra": "Any additional comments? (optional)",
   "issue.type.feature": "Feature Request",
-  "issue.motivation": "What problem does solve this feature?",
+  "issue.motivation": "What problem does this feature solve?",
   "issue.extraHelp": "e.g. some background/context of how you ran into this bug.",
   "issue.title": "Title",
   "issue.repo": "I am opening an issue for",
   "issue.preview": "Preview",
-  "issue.proposal": "What does the proposed api look like?",
+  "issue.proposal": "What does the proposed API look like?",
   "issue.repoHelp": "Please make sure to file the issue at appropriate repo.",
   "issue.reproduction": "Link to minimal reproduction",
   "issue.steps": "Step to reproduce",
